# VINS-Mono-no-ROS-Ubuntu-22.05

./: dockerfile  setup_guide.txt
270525025_euroc_vins/cam0/: data.csv
ar_demo/: CMakeLists.txt
config/euroc/: vins_result.csv
src/: LICENSE  README.md
src/camera_model/: CMakeLists.txt
src/config/euroc/: euroc_config_us.yaml  vins_result.csv  vins_result_alt130.csv
src/vins_estimator/: CMakeLists.txt
src/vins_estimator/src/: estimator_node.cpp
src/vins_estimator/src/loop-closure/: demoDetector.h  loop_closure.h
vins_estimator/: CMakeLists.txt
vins_estimator/src/loop-closure/: TemplatedLoopDetector.h  keyframe.h
